--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -53,7 +53,7 @@
     <footer class="site-footer">
       <div class="container">
         <small>
-          Production ML is a decision system first, a modeling exercise second.
+        Building and operating machine learning systems in production.
         </small>
         <br />
         <small>
